// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sql mix of regular values and nested SqlFragments fragment first, then scalar value 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    "active",
    5,
  ],
  "sql": "SELECT * FROM t WHERE status = $1 AND count > $2",
}
`;

exports[`sql mix of regular values and nested SqlFragments interleaves scalar values and fragment params with correct indices 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    1,
    2,
    3,
  ],
  "sql": "SELECT * FROM t WHERE a = $1 AND b = $2 AND c = $3",
}
`;

exports[`sql mix of regular values and nested SqlFragments scalar first, nested fragment with two params, then scalar 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    "acme",
    10,
    20,
    true,
  ],
  "sql": "DELETE FROM t WHERE tenant = $1 AND (low = $2 AND high = $3) AND flag = $4",
}
`;

exports[`sql multiple nested SqlFragments inlines three fragments with sequential param offsets 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    "alpha",
    "beta",
    "gamma",
  ],
  "sql": "SELECT * FROM t WHERE x = $1 AND y = $2 AND z = $3",
}
`;

exports[`sql multiple nested SqlFragments inlines two fragments with correct param offsets 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    10,
    20,
  ],
  "sql": "SELECT * FROM t WHERE a = $1 AND b = $2",
}
`;

exports[`sql multiple nested SqlFragments nested fragment with 10+ params does not corrupt $1 when reindexing to $10/$11 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    100,
    200,
  ],
  "sql": "WHERE c1=$1 AND c2=$2 AND c3=$3 AND c4=$4 AND c5=$5 AND c6=$6 AND c7=$7 AND c8=$8 AND c9=$9 AND (x = $10 AND y = $11)",
}
`;

exports[`sql multiple values become $1, $2, $3 with values in params order 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    1,
    2,
    3,
  ],
  "sql": "WHERE a = $1 AND b = $2 AND c = $3",
}
`;

exports[`sql nested SqlFragment inlines nested fragment SQL and reindexes its params 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    99,
  ],
  "sql": "SELECT * FROM t WHERE id = $1",
}
`;

exports[`sql nested SqlFragment nested fragment with multiple params gets all reindexed 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    1,
    2,
  ],
  "sql": "SELECT * FROM t WHERE (x = $1 OR y = $2)",
}
`;

exports[`sql nested SqlFragment reindexes nested fragment params when outer has preceding values 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    "bob",
    10,
  ],
  "sql": "SELECT * FROM t WHERE name = $1 AND score > $2",
}
`;

exports[`sql no interpolations returns SQL string with empty params 1`] = `
{
  "__brand": "SqlFragment",
  "params": [],
  "sql": "SELECT * FROM users",
}
`;

exports[`sql single value becomes $1 with value in params 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    42,
  ],
  "sql": "WHERE id = $1",
}
`;

exports[`sql value types handles a Date value 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    2024-01-15T00:00:00.000Z,
  ],
  "sql": "WHERE created_at = $1",
}
`;

exports[`sql value types handles a boolean value 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    true,
  ],
  "sql": "WHERE active = $1",
}
`;

exports[`sql value types handles a null value 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    null,
  ],
  "sql": "WHERE deleted_at = $1",
}
`;

exports[`sql value types handles a number value 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    30,
  ],
  "sql": "WHERE age = $1",
}
`;

exports[`sql value types handles a string value 1`] = `
{
  "__brand": "SqlFragment",
  "params": [
    "alice",
  ],
  "sql": "WHERE name = $1",
}
`;
